--- a/app/src/main/res/layout/activity_ingredient_categories.xml
+++ b/app/src/main/res/layout/activity_ingredient_categories.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vincentzhu.testapplication.Ingredient_Categories">
+    tools:context="com.example.vincentzhu.testapplication.IngredientCatalog">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
