--- a/app/src/main/res/layout/activity_ingredient_list.xml
+++ b/app/src/main/res/layout/activity_ingredient_list.xml
@@ -63,22 +63,21 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="364dp"
+        android:layout_width="match_parent"
         android:layout_height="333dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
         android:scrollbars="none|vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="10dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_tap_remove"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <Spinner
         android:id="@+id/sp_favorites"
