--- a/app/src/main/res/menu/recipe_menu.xml
+++ b/app/src/main/res/menu/recipe_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/action_favorite_recipe"
+        android:title="@string/action_favorite_recipe"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_favorite"/>
+
     <!-- Return the user to the Home activity -->
     <item
         android:id="@+id/action_home"
