--- a/app/src/main/res/layout/activity_personal_recipe.xml
+++ b/app/src/main/res/layout/activity_personal_recipe.xml
@@ -8,44 +8,24 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <ProgressBar
-        android:id="@+id/progressUpload"
-        android:layout_width="48dp"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageDisplay"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:id="@+id/imageDisplay"
         android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
+        android:layout_height="200dp"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/linearLayout2"
-        app:layout_constraintRight_toLeftOf="@+id/progressUpload"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/pic_btn"
-        android:layout_marginEnd="2dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/instr_field"
-        app:layout_constraintTop_toTopOf="@+id/pic_btn"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/pic_btn"
+        app:layout_constraintTop_toBottomOf="@+id/instr_field"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp" />
 
     <EditText
         android:id="@+id/instr_field"
@@ -88,31 +68,28 @@
         android:layout_gravity="center"
         android:onClick="saveRecipe"
         android:text="Save"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="17dp"
-        app:layout_constraintRight_toRightOf="@+id/pic_btn"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/instr_field"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/pic_btn" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/pic_btn"
+        android:layout_marginEnd="16dp" />
 
     <Button
         android:id="@+id/pic_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="saveRecipe"
-        android:text="Select Picture"
-        android:layout_below="@+id/imageDisplay"
         android:layout_alignEnd="@+id/ing_field"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="49dp"
+        android:layout_below="@+id/imageDisplay"
+        android:layout_gravity="center"
+        android:layout_marginRight="16dp"
+        android:onClick="saveRecipe"
+        android:text="Browse Image"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="27dp"
-        app:layout_constraintTop_toBottomOf="@+id/firebase_btn" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/progressUpload"
+        android:layout_marginEnd="16dp" />
 
     <EditText
         android:id="@+id/name_field"
@@ -120,7 +97,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:layout_gravity="center"
-        android:layout_toEndOf="@+id/linearLayout2"
         android:ems="10"
         android:hint="Recipe Name..."
         android:inputType="textMultiLine"
@@ -130,22 +106,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:fillViewport="true"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout2"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="parent"
-        android:layout_marginStart="12dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </LinearLayout>
 
     <Spinner
         android:id="@+id/spinner_type"
@@ -180,17 +140,18 @@
         android:id="@+id/textView19"
         android:layout_width="0dp"
         android:layout_height="32dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="bottom|left"
         android:text="Cuisine"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/instr_field"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="15dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_cuisine"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/instr_field"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/firebase_btn"
-        app:layout_constraintTop_toTopOf="@+id/instr_field" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Spinner
         android:id="@+id/spinner_cuisine"
@@ -199,10 +160,16 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/instr_field"
-        app:layout_constraintRight_toRightOf="@+id/spinner_type"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/textView19" />
+        android:layout_marginBottom="150dp"
+        app:layout_constraintBottom_toTopOf="@+id/pic_btn"
+        app:layout_constraintTop_toBottomOf="@+id/instr_field"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/imageDisplay"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
