--- a/app/src/main/res/layout/activity_personal_ingredient.xml
+++ b/app/src/main/res/layout/activity_personal_ingredient.xml
@@ -10,10 +10,12 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_width="368dp"
+        android:layout_height="56dp"
         android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -199,7 +201,7 @@
         android:layout_marginTop="31dp"
         app:layout_constraintTop_toBottomOf="@+id/spinner_ing_season"
         android:layout_marginBottom="29dp"
-        android:layout_marginRight="-200dp"
+        android:layout_marginRight="25dp"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
