--- a/app/src/main/res/layout/activity_saved_ingredients.xml
+++ b/app/src/main/res/layout/activity_saved_ingredients.xml
@@ -24,7 +24,7 @@
         android:hint="Search Product"
         android:inputType="textVisiblePassword" />
 
-    <ExpandableListView
+    <ListView
         android:id="@+id/savedIngredientListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
