--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,126 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vincentzhu.testapplication.Home"
-    tools:layout_editor_absoluteY="80dp"
-    tools:layout_editor_absoluteX="0dp"
-    >
+
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/Theme.AppCompat.Light"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="111dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:src="@drawable/chef_cook"
+        android:layout_margin="60dp"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="114dp"
+        android:layout_height="56dp"
         android:gravity="center"
-        android:text="@string/text_selection"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="24sp"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        android:text="Please Select From the Following Options :"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginBottom="37dp"
+        android:layout_alignBottom="@+id/spinner"
+        android:layout_centerHorizontal="true" />
 
-    <Spinner
+    <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/spinner"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        style="@style/spinner_style"
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="250dp"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/random_recipe_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        android:text="Random Recipe"
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp" />
 
+    <ImageView
+        android:id="@+id/imageDisplay"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="290dp"
+        android:src="@drawable/sample"/>
 
-    <Button
-        android:id="@+id/btn_add_recipe"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/btn_add_recipe"
-        app:layout_constraintBottom_toTopOf="@+id/btn_saved_recipes"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
-
-    <Button
-        android:id="@+id/btn_add_ing"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/btn_add_ingredient"
-        app:layout_constraintBottom_toTopOf="@+id/btn_saved_ingr"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="8dp" />
-
-    <Button
-        android:id="@+id/btn_saved_recipes"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:onClick="displaySavedRecipe"
-        android:text="@string/btn_saved_recipes"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/fab" />
-
-    <Button
-        android:id="@+id/btn_saved_ingr"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_column="1"
-        android:layout_row="1"
-        android:onClick="displaySavedIngredients"
-        android:text="@string/btn_saved_ingredients"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/fab" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.BottomNavigationView
+        android:theme="@style/NavigationTheme"
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"
-        app:elevation="4dp"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_dining_white" />
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@drawable/nav_item_color"
+        app:itemTextColor="@drawable/nav_item_color"
+        app:menu="@menu/bottombar_menu" />
 
-    <Button
-        android:id="@+id/ingredient_page"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Ingredient Page"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_ing"
-        app:layout_constraintRight_toRightOf="parent" />
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
