--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -2,63 +2,90 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-<LinearLayout
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp"
-        android:layout_weight="0.18"
-        android:ems="24"
-        android:text="User Registration"
-        android:textAlignment="center"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
 
-    <EditText
-        android:layout_margin="15dp"
-        android:inputType="textEmailAddress"
-        android:hint="Enter your Email"
-        android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="111dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:src="@drawable/chef_cook"
+            android:layout_weight="0.09" />
 
-    <EditText
-        android:layout_margin="15dp"
-        android:inputType="textPassword"
-        android:hint="Enter your Password"
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="24dp"
+            android:layout_weight="0.18"
+            android:ems="24"
+            android:text="REGISTER"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Button
-        android:layout_margin="15dp"
-        android:id="@+id/buttonRegister"
-        android:text="Register User"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    
-    <TextView
-        android:textAlignment="center"
-        android:text="Already Registered? Sign in here"
-        android:id="@+id/textViewSignin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:layout_margin="15dp"
+            android:inputType="textEmailAddress"
+            android:hint=" Email"
+            android:id="@+id/editTextEmail"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/email"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_gravity="center" />
 
-    <ProgressBar
-        android:id="@+id/progressReg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="true" />
+        <EditText
+            android:layout_margin="15dp"
+            android:inputType="textPassword"
+            android:hint=" Password"
+            android:id="@+id/editTextPassword"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/password"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_gravity="center" />
+
+        <ImageButton
+            android:id="@+id/buttonRegister"
+            android:text="Register User"
+            android:src="@drawable/register"
+            android:layout_gravity="center"
+            android:layout_width="255dp"
+            android:layout_height="53dp"
+            android:layout_margin="20dp"/>
+
+        <TextView
+            android:textAlignment="center"
+            android:text="Already Registered ? Sign in here"
+            android:id="@+id/textViewSignin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"/>
+
+        <ProgressBar
+            android:id="@+id/progressReg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:background="@drawable/progress"
+            android:layout_gravity="center"/>
 
 
-</LinearLayout>
+    </LinearLayout>
 
 
 
