--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -2,22 +2,50 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <!-- Return the user to the Home activity -->
     <item
         android:id="@+id/action_home"
         android:title="@string/action_home"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/save_ing"
+        android:title="Saved Ingredients"
+        android:icon="@drawable/ingredients_list"
+        app:showAsAction="never"
+        android:theme="@style/NavigationTheme"/>
+
+    <item
+        android:id="@+id/save_recipe"
+        android:title="Saved Recipes"
+        android:icon="@drawable/save"
+        app:showAsAction="never"
+        android:theme="@style/NavigationTheme"/>
+
+    <item
+        android:id="@+id/recipe_favorites"
+        android:title="Favorites"
+        android:icon="@drawable/save"
+        app:showAsAction="never"
+        android:theme="@style/NavigationTheme"/>
+
 
     <!-- Show the user the About Us activity -->
     <item
         android:id="@+id/action_about_us"
         android:title="@string/action_about_us"
-        app:showAsAction="never" />
+        android:icon="@drawable/about_us"
+        app:showAsAction="never"
+        android:theme="@style/NavigationTheme"/>
 
     <!-- Log the user out and return to login activity-->
     <item
         android:id="@+id/action_logout"
         android:title="@string/action_logout"
-        app:showAsAction="never" />
+        android:icon="@drawable/exit_app"
+        app:showAsAction="never"
+        android:theme="@style/NavigationTheme"/>
+
 
 </menu>
