- Prevent Keyboard from automatically lunching on Add Ingredient Windows - Change the Save Recipe to Save Ingredient

--- a/app/src/main/res/menu/ingredient_menu.xml
+++ b/app/src/main/res/menu/ingredient_menu.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/firebase_ing_btn"
-        android:title="Save Recipe"
+        android:title="Save Ingredient"
         android:icon="@drawable/save_recipe"
         app:showAsAction="ifRoom"
         android:theme="@style/NavigationTheme"/>
