--- a/app/src/main/res/layout/activity_personal_ingredient.xml
+++ b/app/src/main/res/layout/activity_personal_ingredient.xml
@@ -22,7 +22,9 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <EditText
                 android:id="@+id/ing_name"
