--- a/app/src/main/res/layout/activity_saved_ingredients.xml
+++ b/app/src/main/res/layout/activity_saved_ingredients.xml
@@ -14,8 +14,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/Theme.AppCompat.Light"/>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <EditText
         android:id="@+id/inputSearch"
