--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -13,7 +13,6 @@
         android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/Theme.AppCompat.Light"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -58,7 +57,10 @@
                 android:hint="Enter name..."
                 android:inputType="textPersonName"
                 android:layout_alignTop="@+id/textView9"
-                android:layout_toEndOf="@+id/textView18" />
+                android:layout_toEndOf="@+id/textView18"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="2"
+                android:maxLength="40"/>
 
             <TextView
                 android:id="@+id/textView10"
@@ -108,7 +110,9 @@
                 android:hint="Multi-line Input..."
                 android:inputType="textMultiLine"
                 android:layout_below="@+id/spinner_cuisine"
-                android:layout_alignStart="@+id/ingredientDescription" />
+                android:layout_alignStart="@+id/ingredientDescription"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="2"/>
 
             <TextView
                 android:id="@+id/textView18"
@@ -126,7 +130,9 @@
                 android:hint="separate by space"
                 android:inputType="textMultiLine"
                 android:layout_below="@+id/textView18"
-                android:layout_alignStart="@+id/recipeInstructions" />
+                android:layout_alignStart="@+id/recipeInstructions"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="2"/>
 
             <TextView
                 android:id="@+id/textView13"
@@ -145,7 +151,10 @@
                 android:hint="Enter name..."
                 android:inputType="textPersonName"
                 android:layout_below="@+id/recipeIngredients"
-                android:layout_alignStart="@+id/recipeIngredients" />
+                android:layout_alignStart="@+id/recipeIngredients"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="2"
+                android:maxLength="40"/>
 
             <TextView
                 android:id="@+id/textView14"
@@ -163,6 +172,8 @@
                 android:ems="10"
                 android:hint="Multi-line input..."
                 android:inputType="textMultiLine"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="2"
                 android:layout_alignBaseline="@+id/textView14"
                 android:layout_alignBottom="@+id/textView14"
                 android:layout_alignParentEnd="true" />
@@ -201,7 +212,9 @@
                 android:layout_below="@+id/textView15"
                 android:ems="10"
                 android:hint="Multi-line input..."
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="2"/>
 
             <TextView
                 android:id="@+id/textView17"
