--- a/app/src/main/res/layout/activity_item_page.xml
+++ b/app/src/main/res/layout/activity_item_page.xml
@@ -46,7 +46,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="Item Name"
+                android:text="@string/tv_item_name"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textSize="24sp" />
@@ -56,7 +56,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@mipmap/ic_launcher"
+                android:contentDescription="@string/desc_item" />
+
+            <TextView
+                android:id="@+id/tv_hint"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:gravity="center_vertical"
+                android:text="@string/tv_hint"
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
             <ExpandableListView
                 android:id="@+id/elv_item_info"
