- Made the search auto text view 1 line and disabled the Enter to new line function - Fixed the menu on item page to include more options with a dark background - removed some finish() lines from activities

--- a/app/src/main/res/layout/activity_personal_recipe.xml
+++ b/app/src/main/res/layout/activity_personal_recipe.xml
@@ -1,175 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vincentzhu.testapplication.PersonalRecipe"
-    tools:layout_editor_absoluteY="25dp"
-    tools:layout_editor_absoluteX="0dp">
+
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:isScrollContainer="false">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+            <EditText
+                android:id="@+id/name_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:hint="Recipe Name..."
+                android:ems="10"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="1"
+                android:maxLength="40"/>
+
+            <EditText
+                android:id="@+id/instr_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Instructions..."
+                android:ems="10"
+                android:backgroundTint="@color/colorPrimary"
+                android:maxLines="1"
+                android:layout_below="@+id/name_field"
+                android:layout_centerHorizontal="true" />
+
+            <AutoCompleteTextView
+                android:id="@+id/actv_ingredients"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/instr_field"
+                android:layout_weight="1"
+                android:hint="Search Ingredients ..."
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_centerHorizontal="true"
+                android:ems="10"/>
+
+            <ListView
+                android:id="@+id/lv_added_ingredients"
+                android:layout_width="220dp"
+                android:layout_height="150dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:divider="@color/colorPrimary"
+                android:dividerHeight="1dp"
+                android:layout_below="@+id/actv_ingredients"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text=" Type :"
+                android:layout_marginLeft="20dp"
+                android:layout_alignTop="@+id/spinner_type"
+                android:layout_alignEnd="@+id/textView19"
+                android:layout_marginTop="12dp" />
+
+            <Spinner
+                android:id="@+id/spinner_type"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                style="@style/spinner_style"
+                android:layout_marginTop="12dp"
+                android:layout_below="@+id/lv_added_ingredients"
+                android:layout_centerHorizontal="true" />
+
+            <Spinner
+                android:id="@+id/spinner_cuisine"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                style="@style/spinner_style"
+                android:layout_below="@+id/textView3"
+                android:layout_alignStart="@+id/spinner_type" />
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:text=" Cuisine :"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/textView3"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="15dp" />
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="70dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/spinner_cuisine"
+                android:id="@+id/imageDisplay"
+                android:layout_marginTop="6dp"/>
+
+            <android.support.design.widget.BottomNavigationView
+                android:theme="@style/NavigationTheme"
+                android:id="@+id/ing_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:itemBackground="@color/colorPrimary"
+                app:itemIconTint="@drawable/nav_item_color"
+                app:itemTextColor="@drawable/nav_item_color"
+                app:menu="@menu/ingredient_menu" />
 
 
-    <ImageView
-        android:id="@+id/imageDisplay"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/pic_btn"
-        app:layout_constraintTop_toBottomOf="@+id/instr_field"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp" />
+        </RelativeLayout>
 
-    <EditText
-        android:id="@+id/instr_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Instructions..."
-        android:inputType="textMultiLine"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/ing_field"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ing_field"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/ing_field" />
 
-    <EditText
-        android:id="@+id/ing_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Ingredient List, separate by spaces"
-        android:inputType="textMultiLine"
-        android:layout_below="@+id/name_field"
-        android:layout_alignStart="@+id/name_field"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/name_field"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/name_field"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/name_field" />
+    </ScrollView>
 
-    <Button
-        android:id="@+id/firebase_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="saveRecipe"
-        android:text="Save"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/pic_btn"
-        android:layout_marginEnd="16dp" />
-
-    <Button
-        android:id="@+id/pic_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/ing_field"
-        android:layout_below="@+id/imageDisplay"
-        android:layout_gravity="center"
-        android:layout_marginRight="16dp"
-        android:onClick="saveRecipe"
-        android:text="Browse Image"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/progressUpload"
-        android:layout_marginEnd="16dp" />
-
-    <EditText
-        android:id="@+id/name_field"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:hint="Recipe Name..."
-        android:inputType="textMultiLine"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Spinner
-        android:id="@+id/spinner_type"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintRight_toRightOf="@+id/textView19"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/ing_field" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="36dp"
-        android:text="Type"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/ing_field"
-        app:layout_constraintRight_toRightOf="@+id/spinner_type"
-        android:layout_marginTop="43dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintLeft_toLeftOf="@+id/spinner_type"
-        app:layout_constraintTop_toTopOf="@+id/name_field" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:gravity="bottom|left"
-        android:text="Cuisine"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintBottom_toTopOf="@+id/spinner_cuisine"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/instr_field"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-    <Spinner
-        android:id="@+id/spinner_cuisine"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="150dp"
-        app:layout_constraintBottom_toTopOf="@+id/pic_btn"
-        app:layout_constraintTop_toBottomOf="@+id/instr_field"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/imageDisplay"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
