--- a/app/src/main/res/layout/activity_search_by_name.xml
+++ b/app/src/main/res/layout/activity_search_by_name.xml
@@ -34,6 +34,10 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="448dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:backgroundTint="@color/colorPrimary"
+        android:maxLines="1"
+        android:imeOptions="actionSearch"
+        android:ellipsize="end"/>
 
 </android.support.constraint.ConstraintLayout>
